--- a/EPharma.App/Views/Clientes/Create.cshtml
+++ b/EPharma.App/Views/Clientes/Create.cshtml
@@ -2,17 +2,17 @@
 @model EPharma.App.ViewModels.ClienteViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo Cliente";
 }
 
-<h1>Create</h1>
+<h1>ViewData["Title"]</h1>
 
-<h4>ClienteViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
@@ -22,6 +22,11 @@
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TipoCliente" class="control-label"></label><br />
+                <input type="radio" value="1" asp-for="TipoCliente" checked /> Pessoa Física<br />
+                <input type="radio" value="2" asp-for="TipoCliente" /> Pessoa Jurídica
             </div>
             <div class="form-group">
                 <label asp-for="CpfCnpj" class="control-label"></label>
@@ -49,14 +54,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Cadastrar" class="btn btn-primary" />
+                <a class="btn btn-info" asp-action="Index">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
