--- a/EPharma.App/Views/Planos/Create.cshtml
+++ b/EPharma.App/Views/Planos/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model EPharma.App.ViewModels.PlanoViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastro Plano";
 }
 
-<h1>Create</h1>
+<h1> ViewData["Title"]</h1>
 
-<h4>PlanoViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,13 +38,10 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-info" asp-action="Index">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
