--- a/EPharma.App/Views/Clientes/Delete.cshtml
+++ b/EPharma.App/Views/Clientes/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.TipoCliente)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.TipoCliente)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CpfCnpj)
         </dt>
         <dd class = "col-sm-10">
