--- a/EPharma.App/Views/Clientes/Create.cshtml
+++ b/EPharma.App/Views/Clientes/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Novo Cliente";
 }
 
-<h1>ViewData["Title"]</h1>
+<h1>@ViewData["Title"]</h1>
 
 <hr />
 <div class="row">
@@ -14,20 +14,26 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <label asp-for="TipoCliente" class="control-label"></label><br />
+                <input type="radio" value="1" asp-for="TipoCliente" checked /> Pessoa Física<br />
+                <input type="radio" value="2" asp-for="TipoCliente" /> Pessoa Jurídica
             </div>
+
+            @*<div class="form-group">
+                <label asp-for="Plano.Id" class="control-label"></label>
+                <select asp-for="Plano.Id" class="form-control" asp-items="@(new SelectList(Model.Planos, "Id", "Nome"))">
+                    <option></option>
+                </select>
+
+                <span asp-validation-for="PlanoId" class="text-danger"></span>
+            </div>*@
+
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TipoCliente" class="control-label"></label><br />
-                <input type="radio" value="1" asp-for="TipoCliente" checked /> Pessoa Física<br />
-                <input type="radio" value="2" asp-for="TipoCliente" /> Pessoa Jurídica
-            </div>
+
             <div class="form-group">
                 <label asp-for="CpfCnpj" class="control-label"></label>
                 <input asp-for="CpfCnpj" class="form-control" />
