--- a/EPharma.App/Views/Planos/Create.cshtml
+++ b/EPharma.App/Views/Planos/Create.cshtml
@@ -4,18 +4,14 @@
     ViewData["Title"] = "Cadastro Plano";
 }
 
-<h1> ViewData["Title"]</h1>
+<h1>@ViewData["Title"]</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="NomePlano" class="control-label"></label>
                 <input asp-for="NomePlano" class="form-control" />
