--- a/EPharma.App/Views/Clientes/Edit.cshtml
+++ b/EPharma.App/Views/Clientes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EPharma.App.ViewModels.ClienteViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Cliente";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
