--- a/EPharma.App/Views/Planos/Delete.cshtml
+++ b/EPharma.App/Views/Planos/Delete.cshtml
@@ -1,48 +1,46 @@
 ﻿@model EPharma.App.ViewModels.PlanoViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Tem certeza que deseja deletar - " + Model.NomePlano + "?";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PlanoViewModel</h4>
+    <h4 style="padding-top: 50px">@ViewData["Title"]</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NomePlano)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NomePlano)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataInicioVigencia)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataInicioVigencia)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataFimVigencia)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataFimVigencia)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsPJ)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsPJ)
-        </dd>
-    </dl>
-    
+    <div class="container">
+        <div class="row">
+            <div class="cl-md-12">
+                <dl>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NomePlano)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NomePlano)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DataInicioVigencia)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DataInicioVigencia)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DataFimVigencia)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DataFimVigencia)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.IsPJ)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.IsPJ)
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
