--- a/EPharma.App/Views/Planos/Details.cshtml
+++ b/EPharma.App/Views/Planos/Details.cshtml
@@ -1,45 +1,49 @@
 ﻿@model EPharma.App.ViewModels.PlanoViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe do Plano de Saúde - " + Model.NomePlano;
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>PlanoViewModel</h4>
+    <h4 style="padding-top: 50px">@ViewData["Title"]</h4>
     <hr />
-    <dl class="row">     
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NomePlano)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NomePlano)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataInicioVigencia)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataInicioVigencia)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataFimVigencia)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataFimVigencia)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsPJ)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsPJ)
-        </dd>
-    </dl>
+    <div class="container">
+        <div class="row">
+            <div class="cl-md-12">
+                <dl>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NomePlano)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NomePlano)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DataInicioVigencia)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DataInicioVigencia)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DataFimVigencia)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DataFimVigencia)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.IsPJ)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.IsPJ)
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
+    </div>
 </div>
