--- a/EPharma.App/Views/Planos/Edit.cshtml
+++ b/EPharma.App/Views/Planos/Edit.cshtml
@@ -1,53 +1,55 @@
 ﻿@model EPharma.App.ViewModels.PlanoViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editando o Plano de Saúde - " + Model.NomePlano;
 }
 
-<h1>Edit</h1>
-
-<h4>PlanoViewModel</h4>
+<h4 style="padding-top:30px"> @ViewData["Title"]</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="NomePlano" class="control-label"></label>
                 <input asp-for="NomePlano" class="form-control" />
                 <span asp-validation-for="NomePlano" class="text-danger"></span>
+            </div>         
+            <div class="row">
+                <div class="col">
+                    <label asp-for="DataInicioVigencia" class="control-label"></label>
+                    <input asp-for="DataInicioVigencia" class="form-control" />
+                    <span asp-validation-for="DataInicioVigencia" class="text-danger"></span>
+                </div>
+                <div class="col">
+                    <label asp-for="DataFimVigencia" class="control-label"></label>
+                    <input asp-for="DataFimVigencia" class="form-control" />
+                    <span asp-validation-for="DataFimVigencia" class="text-danger"></span>
+                </div>
             </div>
+            <div style="padding-top:10px">
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="IsPJ" /> @Html.DisplayNameFor(model => model.IsPJ)
+                    </label>
+                </div>
+            </div>
+            
             <div class="form-group">
-                <label asp-for="DataInicioVigencia" class="control-label"></label>
-                <input asp-for="DataInicioVigencia" class="form-control" />
-                <span asp-validation-for="DataInicioVigencia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataFimVigencia" class="control-label"></label>
-                <input asp-for="DataFimVigencia" class="form-control" />
-                <span asp-validation-for="DataFimVigencia" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsPJ" /> @Html.DisplayNameFor(model => model.IsPJ)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a class=" btn btn-info" href="javascript:window.history.back()">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+<script>
+
+</script>
 }
