--- a/EPharma.App/Views/Clientes/Create.cshtml
+++ b/EPharma.App/Views/Clientes/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Novo Cliente";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h4 style="padding-top:30px">@ViewData["Title"]</h4>
 
 <hr />
 <div class="row">
@@ -48,7 +48,7 @@
            
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
-                <input asp-for="DataNascimento" class="form-control" />
+                <input asp-for="DataNascimento" asp-format="{0:dd/MM/yyyy}" class="form-control" />
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
