--- a/EPharma.App/Views/Clientes/Delete.cshtml
+++ b/EPharma.App/Views/Clientes/Delete.cshtml
@@ -1,68 +1,75 @@
 ﻿@model EPharma.App.ViewModels.ClienteViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Tem certeza que deseja deletar - " + Model.Nome + "?";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ClienteViewModel</h4>
+    <h4 style="padding-top: 50px">@ViewData["Title"]</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoCliente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoCliente)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CpfCnpj)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CpfCnpj)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RG)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RG)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="cl-md-12">
+                <dl>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Nome)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.TipoCliente)
+                    </dt>
+                    <dd>
+                        @if (Model.TipoCliente == 1)
+                        {
+                            <span>Pessoa Física</span>
+                        }
+                        else
+                        {
+                            <span>Pessoa Jurídica</span>
+                        }
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.CpfCnpj)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.CpfCnpj)
+                    </dd>
+                    @if (Model.TipoCliente == 1)
+                    {
+                        <dt>
+                            @Html.DisplayNameFor(model => model.RG)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.RG)
+                        </dd>
+                    }
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DataNascimento)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DataNascimento)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Telefone)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Telefone)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Email)
+                    </dd>
+                </dl>
+
+                <form asp-action="Delete">
+                    <input type="submit" value="Delete" class="btn btn-danger" /> |
+                    <a asp-action="Index">Back to List</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
