--- a/EPharma.App/Views/Planos/Create.cshtml
+++ b/EPharma.App/Views/Planos/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EPharma.App.ViewModels.PlanoViewModel
 
 @{
-    ViewData["Title"] = "Cadastro Plano";
+    ViewData["Title"] = "Cadastro Plano de Saúde";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h4 style="padding-top:30px">@ViewData["Title"]</h4>
 
 <hr />
 <div class="row">
@@ -18,8 +18,8 @@
                 <span asp-validation-for="NomePlano" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataInicioVigencia" class="control-label"></label>
-                <input asp-for="DataInicioVigencia" class="form-control" />
+                <label asp-for="DataInicioVigencia"  class="control-label"></label>
+                <input asp-for="DataInicioVigencia"  class="form-control" />
                 <span asp-validation-for="DataInicioVigencia" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -33,7 +33,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Cadastrar" class="btn btn-primary" />
                 <a class="btn btn-info" asp-action="Index">Voltar</a>
             </div>
         </form>
