--- a/EPharma.App/Views/Planos/Delete.cshtml
+++ b/EPharma.App/Views/Planos/Delete.cshtml
@@ -11,7 +11,6 @@
         <div class="row">
             <div class="cl-md-12">
                 <dl>
-
                     <dt>
                         @Html.DisplayNameFor(model => model.NomePlano)
                     </dt>
@@ -34,7 +33,15 @@
                         @Html.DisplayNameFor(model => model.IsPJ)
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.IsPJ)
+                        @if (Model.IsPJ)
+                        {
+                            <span>Sim</span>
+                        }
+                        else
+                        {
+                            <span>Não</span>
+
+                        }
                     </dd>
                 </dl>
             </div>
@@ -42,7 +49,7 @@
     </div>
 
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
     </form>
 </div>
