--- a/EPharma.App/Views/Planos/Index.cshtml
+++ b/EPharma.App/Views/Planos/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.IsPJ)
             </th>
+            <th>
+                Ações
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -39,7 +42,14 @@
                 @Html.DisplayFor(modelItem => item.DataFimVigencia)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsPJ)
+                @if (item.IsPJ)
+                {
+                    <span>Sim</span>
+                }
+                else
+                {
+                    <span>Não</span>
+                }
             </td>          
             <td>
                 <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><spam class="fa fa-search"></spam></a>
