--- a/EPharma.App/Views/Planos/Delete.cshtml
+++ b/EPharma.App/Views/Planos/Delete.cshtml
@@ -1,4 +1,6 @@
 ﻿@model EPharma.App.ViewModels.PlanoViewModel
+@using EPharma.App.Extensions
+
 
 @{
     ViewData["Title"] = "Tem certeza que deseja deletar - " + Model.NomePlano + "?";
@@ -21,13 +23,13 @@
                         @Html.DisplayNameFor(model => model.DataInicioVigencia)
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.DataInicioVigencia)
+                        @this.FormataData(Model.DataInicioVigencia)
                     </dd>
                     <dt>
                         @Html.DisplayNameFor(model => model.DataFimVigencia)
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.DataFimVigencia)
+                        @this.FormataData(Model.DataFimVigencia)
                     </dd>
                     <dt>
                         @Html.DisplayNameFor(model => model.IsPJ)
