--- a/EPharma.App/Views/Clientes/Details.cshtml
+++ b/EPharma.App/Views/Clientes/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model EPharma.App.ViewModels.ClienteViewModel
+@using EPharma.App.Extensions
 
 @{
     ViewData["Title"] = "Detalhes do Cliente - " + Model.Nome;
@@ -19,25 +20,29 @@
             @Html.DisplayNameFor(model => model.CpfCnpj)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CpfCnpj)
+            @this.FormataDocumento(Model.TipoCliente, Model.CpfCnpj)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RG)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RG)
-        </dd>
+        @if (Model.TipoCliente == 1)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.RG)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.RG)
+            </dd>
+        }
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DataNascimento)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataNascimento)
+            @this.FormataData(Model.DataNascimento)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Telefone)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Telefone)
+            @this.FormataTelefone(Model.Telefone)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
@@ -49,7 +54,7 @@
             @Html.DisplayNameFor(model => model.DataCadastro)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataCadastro)
+            @this.FormataData(Model.DataCadastro)
         </dd>
     </dl>
 </div>
