--- a/EPharma.App/Views/Clientes/Edit.cshtml
+++ b/EPharma.App/Views/Clientes/Edit.cshtml
@@ -1,20 +1,17 @@
 ﻿@model EPharma.App.ViewModels.ClienteViewModel
+@using EPharma.App.Extensions
 
 @{
-    ViewData["Title"] = "Editar Cliente";
+    ViewData["Title"] = "Editar - " + Model.Nome;
 }
 
-<h1>@ViewData["Title"]</h1>
+<h4>@ViewData["Title"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -25,11 +22,14 @@
                 <input asp-for="CpfCnpj" class="form-control" />
                 <span asp-validation-for="CpfCnpj" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="RG" class="control-label"></label>
-                <input asp-for="RG" class="form-control" />
-                <span asp-validation-for="RG" class="text-danger"></span>
-            </div>
+            @if (Model.TipoCliente == 1)
+            {
+                <div class="form-group">
+                    <label asp-for="RG" class="control-label"></label>
+                    <input asp-for="RG" class="form-control" />
+                    <span asp-validation-for="RG" class="text-danger"></span>
+                </div>
+            }
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
                 <input asp-for="DataNascimento" class="form-control" />
@@ -51,20 +51,18 @@
                         @Html.DisplayNameFor(model => model.DataCadastro)
                     </dt>
                     <dd>
-                        @Html.DisplayFor(model => model.DataCadastro)
+                        @this.FormataData(Model.DataCadastro)
                     </dd>
                 </dl>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a class=" btn btn-info" href="javascript:window.history.back()">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
