--- a/EPharma.App/Views/Clientes/Edit.cshtml
+++ b/EPharma.App/Views/Clientes/Edit.cshtml
@@ -59,6 +59,10 @@
                 <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a class=" btn btn-info" href="javascript:window.history.back()">Voltar</a>
             </div>
+            <div style="padding-top:30px">
+                <partial name="_ListPlanos" />
+            </div>
+
         </form>
     </div>
 </div>
