--- a/EPharma.App/Views/Planos/Index.cshtml
+++ b/EPharma.App/Views/Planos/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Lista de Plano";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h4>@ViewData["Title"]</h4>
 
 <p>
     <a class="btn btn-info" asp-action="Create">Novo Plano</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-hover">
+    <thead class="thead-light">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.NomePlano)
@@ -30,33 +30,34 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>            
-            <td>
-                @Html.DisplayFor(modelItem => item.NomePlano)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataInicioVigencia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataFimVigencia)
-            </td>
-            <td>
-                @if (item.IsPJ)
-                {
-                    <span>Sim</span>
-                }
-                else
-                {
-                    <span>Não</span>
-                }
-            </td>          
-            <td>
-                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><spam class="fa fa-search"></spam></a>
-                <a class="btn btn-warning" supress-by-claim-name="Fornecedor" supress-by-claim-value="Editar" asp-action="Edit" asp-route-id="@item.Id"><spam class="fa fa-pencil-alt"></spam></a>
-                <a class="btn btn-danger" supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir" asp-action="Delete" asp-route-id="@item.Id"><spam class="fa fa-trash"></spam></a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NomePlano)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataInicioVigencia)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataFimVigencia)
+                </td>
+                <td>
+                    @if (item.IsPJ)
+                    {
+                        <span>Sim</span>
+                    }
+                    else
+                    {
+                        <span>Não</span>
+                    }
+                </td>
+                <td>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><spam class="fa fa-search"></spam></a>
+                    <a class="btn btn-warning" supress-by-claim-name="Fornecedor" supress-by-claim-value="Editar" asp-action="Edit" asp-route-id="@item.Id"><spam class="fa fa-pencil-alt"></spam></a>
+                    <a class="btn btn-danger" supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir" asp-action="Delete" asp-route-id="@item.Id"><spam class="fa fa-trash"></spam></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
