--- a/EPharma.App/Views/Planos/Create.cshtml
+++ b/EPharma.App/Views/Planos/Create.cshtml
@@ -10,16 +10,15 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>       
             <div class="form-group">
                 <label asp-for="NomePlano" class="control-label"></label>
-                <input asp-for="NomePlano" class="form-control" />
+                <input asp-for="NomePlano" type="text" class="form-control" />
                 <span asp-validation-for="NomePlano" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataInicioVigencia"  class="control-label"></label>
-                <input asp-for="DataInicioVigencia"  class="form-control" />
+                <label asp-for="DataInicioVigencia" class="control-label"></label>
+                <input asp-for="DataInicioVigencia" class="form-control" />
                 <span asp-validation-for="DataInicioVigencia" class="text-danger"></span>
             </div>
             <div class="form-group">
