--- a/EPharma.App/Views/Clientes/Create.cshtml
+++ b/EPharma.App/Views/Clientes/Create.cshtml
@@ -14,25 +14,26 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="TipoCliente" class="control-label"></label><br />
-                <input type="radio" value="1" asp-for="TipoCliente" checked /> Pessoa Física<br />
-                <input type="radio" value="2" asp-for="TipoCliente" /> Pessoa Jurídica
-            </div>
-
-            @*<div class="form-group">
-                <label asp-for="Plano.Id" class="control-label"></label>
-                <select asp-for="Plano.Id" class="form-control" asp-items="@(new SelectList(Model.Planos, "Id", "Nome"))">
-                    <option></option>
-                </select>
-
-                <span asp-validation-for="PlanoId" class="text-danger"></span>
-            </div>*@
-
-            <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="TipoCliente" class="control-label"></label>
+                <select asp-for="TipoCliente" class="form-control">
+                    <option value="0" selected>Escolha um Tipo de Cliente</option>
+                    <option value="1">Pessoa Física</option>
+                    <option value="2">Pessoa Jurídica</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="PlanoId" class="control-label"></label>
+                <select multiple id="plano" asp-for="PlanoId" class="form-control">
+                </select>
+            </div>
+
             <div class="row">
                 <div class="col">
                     <label asp-for="CpfCnpj" class="control-label"></label>
@@ -45,10 +46,10 @@
                     <span asp-validation-for="RG" class="text-danger"></span>
                 </div>
             </div>
-           
+
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
-                <input asp-for="DataNascimento" asp-format="{0:dd/MM/yyyy}" class="form-control" />
+                <input asp-for="DataNascimento" class="form-control" />
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -71,4 +72,33 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+<script>
+    $("#TipoCliente").change(function () {
+        var tipoClienteId = $("#TipoCliente").val();
+        $("#plano").html('');
+
+        if (tipoClienteId == 1) {
+            $("#RG").prop("readonly", false);
+            $("#DataNascimento").prop("readonly", false);
+        } else {
+            $("#RG").prop("readonly", true);
+            $("#DataNascimento").prop("readonly", true);
+        }
+                $.ajax({
+                    type: 'GET',
+                    url: '/getPlanos?handler=' + tipoClienteId,
+                    contentType: 'json',
+                    success: function (result) {
+                        var formoption = "";
+                        $.each(result, function (v) {
+                            var val = result[v];
+                            formoption += "<option class='opt' value='" + val.id + "'>" + val.nomePlano + "</option>";
+                        });
+                        $('#plano').append(formoption);
+                    }
+                });
+    });
+    
+</script>
 }
